--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -663,8 +663,8 @@ video {
   height: max-content;
 }
 
-.min-h-28 {
-  min-height: 7rem;
+.min-h-36 {
+  min-height: 9rem;
 }
 
 .w-1\/3 {
@@ -724,6 +724,10 @@ video {
   align-items: center;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -766,6 +770,10 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .gap-y-3 {
@@ -882,12 +890,12 @@ video {
   background-color: transparent;
 }
 
-.bg-imagen-perfil {
-  background-image: url('../images/Foto_Josue.JPG');
-}
-
 .bg-open-menu {
   background-image: url('../images/icon-hamburger.svg');
+}
+
+.bg-imagen-perfil {
+  background-image: url('../images/linkeperfil.png');
 }
 
 .bg-cover {
@@ -915,9 +923,9 @@ video {
   padding: 0.5rem;
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-3 {
@@ -947,6 +955,10 @@ video {
 
 .pt-5 {
   padding-top: 1.25rem;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -1059,10 +1071,6 @@ video {
   transition-duration: 300ms;
 }
 
-.hover\:bg-\[\#002ad6\]\/90:hover {
-  background-color: rgb(0 42 214 / 0.9);
-}
-
 .hover\:bg-\[\#1240ff\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(18 64 255 / var(--tw-bg-opacity, 1));
@@ -1105,6 +1113,10 @@ video {
     display: none;
   }
 
+  .md\:w-2\/3 {
+    width: 66.666667%;
+  }
+
   .md\:w-\[50\%\] {
     width: 50%;
   }
@@ -1138,10 +1150,6 @@ video {
     flex-wrap: wrap;
   }
 
-  .md\:justify-start {
-    justify-content: flex-start;
-  }
-
   .md\:justify-center {
     justify-content: center;
   }
@@ -1152,6 +1160,10 @@ video {
 
   .md\:gap-10 {
     gap: 2.5rem;
+  }
+
+  .md\:gap-5 {
+    gap: 1.25rem;
   }
 
   .md\:justify-self-start {
@@ -1182,10 +1194,6 @@ video {
 
   .md\:pb-5 {
     padding-bottom: 1.25rem;
-  }
-
-  .md\:text-left {
-    text-align: left;
   }
 
   .md\:text-3xl {
